--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alma Santang</title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
   	<link rel="stylesheet" href="assets/css/main.css" type="text/css">
@@ -16,16 +17,13 @@
       <source src="assets/images/portfolio-slideshow.mp4" type="video/mp4">
     </video>
       
-    <div class="name">
+<!--     <div class="name">
       ALMA SANTANG
-    </div>
+    </div> -->
 
-    <div class="contact-1">
-      DOWNLOAD PORTFOLIO
-    </div>
-
-    <div class="contact-2">
-      CONTACT
+    <div class="long-text">
+      I am a designer based in Melbourne, Australia. Currently <span class="not">not available</span> for work until November. Follow my work on Instagram or contact me via email.
+      Zoe is a designer, animator, sometimes-coder, swimmer and human being based in Melbourne, Australia.
     </div>
     <!-- end here -->
   </body>
