--- a/index.html
+++ b/index.html
@@ -13,9 +13,23 @@
   </head>
   <body class="background-black">
     <!-- start here -->
-    <video autoplay muted loop id="myVideo">
+<!--     <video autoplay muted loop id="myVideo">
       <source src="assets/images/portfolio-slideshow.mp4" type="video/mp4">
-    </video>
+    </video> -->
+
+    <div class="video-container">
+  <video autoplay loop width="1280" height="720">
+    <source src="assets/images/portfolio-slideshow.mp4" type="video/mp4">
+  </video>
+</div>
+
+<div class="videocontainer">
+  <video autoplay loop width="1280" height="720" srcdesk="assets/images/portfolio-slideshow.mp4" srcmob="video-mobile.mp4"></video>
+</div>
+
+<div class="video-container">
+  <video autoplay loop muted playsinline width="1280" height="720" srcdesk="assets/images/portfolio-slideshow.mp4" srcmob="video-mobile.mp4"></video>
+</div>
       
 <!--     <div class="name">
       ALMA SANTANG
