--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 </div>
 
 <div class="videocontainer">
-  <video autoplay loop width="1280" height="720" srcdesk="assets/images/portfolio-slideshow.mp4" srcmob="video-mobile.mp4"></video>
+  <video autoplay loop width="1280" height="720" srcdesk="assets/images/portfolio-slideshow.mp4" srcmob="assets/images/portfolio-slideshow.mp4"></video>
 </div>
 
 <div class="video-container">
-  <video autoplay loop muted playsinline width="1280" height="720" srcdesk="assets/images/portfolio-slideshow.mp4" srcmob="video-mobile.mp4"></video>
+  <video autoplay loop muted playsinline width="1280" height="720" srcdesk="assets/images/portfolio-slideshow.mp4" srcmob="assets/images/portfolio-slideshow.mp4"></video>
 </div>
       
 <!--     <div class="name">
