--- a/index.html
+++ b/index.html
@@ -17,19 +17,14 @@
       <source src="assets/images/portfolio-slideshow.mp4" type="video/mp4">
     </video> -->
 
-    <div class="video-container">
-  <video autoplay loop width="1280" height="720">
-    <source src="assets/images/portfolio-slideshow.mp4" type="video/mp4">
-  </video>
+<div class="row">
+    <div class="videoBgWrapper">
+    <video loop muted autoplay poster="assets/images/portfolio-slideshow.mp4" class="videoBg">
+        <source src="assets/images/portfolio-slideshow.mp4" type="video/mp4">
+    </video>
 </div>
 
-<div class="videocontainer">
-  <video autoplay loop width="1280" height="720" srcdesk="assets/images/portfolio-slideshow.mp4" srcmob="assets/images/portfolio-slideshow.mp4"></video>
-</div>
 
-<div class="video-container">
-  <video autoplay loop muted playsinline width="1280" height="720" srcdesk="assets/images/portfolio-slideshow.mp4" srcmob="assets/images/portfolio-slideshow.mp4"></video>
-</div>
       
 <!--     <div class="name">
       ALMA SANTANG
