--- a/index.html
+++ b/index.html
@@ -17,23 +17,22 @@
       <source src="assets/images/portfolio-slideshow.mp4" type="video/mp4">
     </video> -->
 
-<div class="row">
-    <div class="videoBgWrapper">
+
     <video loop muted autoplay poster="assets/images/portfolio-slideshow.mp4" class="videoBg">
         <source src="assets/images/portfolio-slideshow.mp4" type="video/mp4">
     </video>
-</div>
 
-
-      
-<!--     <div class="name">
+    <div class="name">
       ALMA SANTANG
+    </div>
+
+
+
+<!--     <div class="long-text">
+      I am a designer based in Melbourne, Australia. Currently <span class="not">not available</span> for work until November. Follow my work on <span class="ig">Instagram</span> or contact me via <span class="email">email</span>.
     </div> -->
 
-    <div class="long-text">
-      I am a designer based in Melbourne, Australia. Currently <span class="not">not available</span> for work until November. Follow my work on Instagram or contact me via email.
-      Zoe is a designer, animator, sometimes-coder, swimmer and human being based in Melbourne, Australia.
-    </div>
+
     <!-- end here -->
   </body>
 </html>
