--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       ALMA SANTANG
     </div>
 
+    <div class="contact-1" >
+      <a href="http://www.tinyurl.com/alma19portfolio" target="_blank">(DOWNLOAD PORTFOLIO)</a>
+    </div>
+
+
+
 
 
 <!--     <div class="long-text">
