--- a/index copy.html
+++ b/index copy.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+  	<meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alma Santang</title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/main.css" type="text/css">
-    <script src="assets/js/jquery-3.4.1.min.js"></script>
-    <script src="assets/js/main.js"></script>
+  	<link rel="stylesheet" href="assets/css/main.css" type="text/css">
+  	<script src="assets/js/jquery-3.4.1.min.js"></script>
+  	<script src="assets/js/main.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/aak4thp.css">
   </head>
   <body class="background-black">
@@ -18,23 +18,17 @@
     </video> -->
 
 
+    <video loop muted autoplay poster="assets/images/portfolio-slideshow.mp4" class="videoBg">
+        <source src="assets/images/portfolio-slideshow.mp4" type="video/mp4">
+    </video>
+
     <div class="name">
-      AS
+      ALMA SANTANG
     </div>
 
-    <div class="bodycopy">
-      <span class="wave">👋</span> Alma Santang is a communication designer based in Naarm/Melbourne.
-    </div>
-
-    <div class="smallbodycopy">
-      Her main focus is Brand Identity and Publishing. She helps build and shape brands through thoughtful process and considerations. She likes Indonesian food, good music, and sunset. She's also still having mixed feelings about speaking in third person.
-    </div>
-
-
-
-   <!--  <div class="contact-1" >
+    <div class="contact-1" >
       <a href="http://www.tinyurl.com/alma19portfolio" target="_blank">(DOWNLOAD PORTFOLIO)</a>
-    </div> -->
+    </div>
 
 
 
