--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alma Santang</title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
     <link rel="stylesheet" href="assets/css/main.css" type="text/css">
@@ -22,8 +21,11 @@
       AS
     </div>
 
+<div class="waave">
+  <span class="wave">👋</span>
+</div>
     <div class="bodycopy">
-      <span class="wave">👋</span> Alma Santang is a communication designer based in Naarm/Melbourne.
+       Alma Santang is a communication designer based in Naarm/Melbourne.
     </div>
 
     <div class="smallbodycopy">
