--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       AS
     </div>
 
-<div class="waave">
+<!-- <div class="waave">
   <span class="wave">👋</span>
-</div>
+</div> -->
     <div class="bodycopy">
        Alma Santang is a communication designer based in Naarm/Melbourne.
     </div>
