update with grid

--- a/index.html
+++ b/index.html
@@ -6,31 +6,42 @@
     <title>Alma Santang</title>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
     <link rel="stylesheet" href="assets/css/main.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/grid.css" type="text/css">
     <script src="assets/js/jquery-3.4.1.min.js"></script>
     <script src="assets/js/main.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/aak4thp.css">
   </head>
   <body class="background-black">
-    <!-- start here -->
-<!--     <video autoplay muted loop id="myVideo">
-      <source src="assets/images/portfolio-slideshow.mp4" type="video/mp4">
-    </video> -->
 
+    <div class="grid">
+      <div class="col">
+        <div class="name">
+          AS
+        </div>
+      </div>
+    </div>
 
-    <div class="name">
-      AS
+    <div class="grid">
+      <div class="col">
+        <div class="bodycopy">
+       Alma Santang is a communication designer based in Naarm/Melbourne.
+        </div>
+      </div>
     </div>
 
 <!-- <div class="waave">
   <span class="wave">👋</span>
 </div> -->
-    <div class="bodycopy">
-       Alma Santang is a communication designer based in Naarm/Melbourne.
+    
+    <div class="grid">
+      <div class="col">
+        <div class="smallbodycopy">
+          Her main focus is Brand Identity and Publishing. She helps build and shape brands through thoughtful process and considerations. She likes Indonesian food, good music, and sunset. She's also still having mixed feelings about speaking in third person.
+        </div>
+      </div>
     </div>
 
-    <div class="smallbodycopy">
-      Her main focus is Brand Identity and Publishing. She helps build and shape brands through thoughtful process and considerations. She likes Indonesian food, good music, and sunset. She's also still having mixed feelings about speaking in third person.
-    </div>
+
 
 
 
