--- a/index.html
+++ b/index.html
@@ -24,14 +24,10 @@
     <div class="grid">
       <div class="col">
         <div class="bodycopy">
-       Alma Santang is a communication designer based in Naarm/Melbourne.
+            <span class="wave">👋</span> Alma Santang is a communication designer based in Naarm/Melbourne.
         </div>
       </div>
     </div>
-
-<!-- <div class="waave">
-  <span class="wave">👋</span>
-</div> -->
     
     <div class="grid">
       <div class="col">
