--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
 
     <div class="grid">
       <div class="col">
+         <div class="wavey">
+            <span class="wave">👋</span></div>
+      </div>
+    </div>
+
+    <div class="grid">
+      <div class="col">
         <div class="bodycopy">
-            <span class="wave">👋</span> Alma Santang is a communication designer based in Naarm/Melbourne.
+            Alma Santang is a communication designer based in Naarm/Melbourne.
         </div>
       </div>
     </div>
