--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
   </head>
   <body class="background-black">
 
-    <div class="grid">
-      <div class="col">
-        <div class="name">
+    <div class="logo-bar">
+        <span class="logo">
           AS
-        </div>
-      </div>
+         </span>
     </div>
+
+
 
     <div class="grid">
       <div class="col">
          <div class="wavey">
-            <span class="wave">👋</span></div>
+            
       </div>
     </div>
 
     <div class="grid">
       <div class="col">
-        <div class="bodycopy">
+        <div class="bodycopy"> <span class="wave">👋</span>
             Alma Santang is a communication designer based in Naarm/Melbourne.
         </div>
       </div>
@@ -39,12 +39,24 @@
     <div class="grid">
       <div class="col">
         <div class="smallbodycopy">
-          Her main focus is Brand Identity and Publishing. She helps build and shape brands through thoughtful process and considerations. She likes Indonesian food, good music, and sunset. She's also still having mixed feelings about speaking in third person.
+          Her main focus is Brand Identity and Publishing. She helps build and shape brands through thoughtful process and considerations. She likes Indonesian food, good music, and sunset.
+          <br><br><br>
+          <span class="underline">PROJECTS &#8595;</span>
+          <br><br>
+          <span class="pr1">Check Yourself</span><br>
+          <span class="pr2">Museum of the Invisible</span><br>
+          <span class="pr3">NOVUS</span><br>
+          <span class="pr4">Product: Natural</span><br>
+          <span class="pr5">The Robin Hood?</span><br>
+          <span class="pr6">Kanye vs. the people</span><br>
+          <span class="pr7">AGORA</span><br>
+          <span class="pr8">All Good Works</span><br>
+
+
+
         </div>
       </div>
     </div>
-
-
 
 
 
