--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="grid">
       <div class="col">
-        <div class="bodycopy"> <span class="wave">👋</span>
+        <div class="bodycopy"> <span class="wave">👋</span><br>
             Alma Santang is a communication designer based in Naarm/Melbourne.
         </div>
       </div>
