--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 
     <div class="grid">
       <div class="col">
-         <div class="wavey">
-            
+         <div class="wavey">  
       </div>
     </div>
 
@@ -39,8 +38,9 @@
     <div class="grid">
       <div class="col">
         <div class="smallbodycopy">
-          Her main focus is Brand Identity and Publishing. She helps build and shape brands through thoughtful process and considerations. She likes Indonesian food, good music, and sunset.
+          Her main focus is Brand Identity and Publishing. She helps build and shape brands through thoughtful process and considerations. Indonesian food, good music, and sunset are a few of her favourite things.
           <br><br><br>
+          <div class="portfolio-part">
           <span class="underline">PROJECTS &#8595;</span>
           <br><br>
           <span class="pr1">Check Yourself</span><br>
@@ -50,10 +50,16 @@
           <span class="pr5">The Robin Hood?</span><br>
           <span class="pr6">Kanye vs. the people</span><br>
           <span class="pr7">AGORA</span><br>
-          <span class="pr8">All Good Works</span><br>
+          <span class="pr8">All Good Works</span>
+          <br><br><br>
 
-
-
+          <span class="underline">GET IN TOUCH &#8595;</span>
+          <br><br>
+          <span class="insta">Instagram</span><br>
+          <span class="linkedin">Linked in</span><br>
+          <span class="email">Email</span><br>
+          <br><br><br>
+          </div>
         </div>
       </div>
     </div>
