--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
           <div class="portfolio-part">
           <span class="underline">PROJECTS &#8595;</span>
           <br><br>
-          <span class="pr1">Check Yourself</span><br>
-          <span class="pr2">Museum of the Invisible</span><br>
-          <span class="pr3">NOVUS</span><br>
-          <span class="pr4">Product: Natural</span><br>
-          <span class="pr5">The Robin Hood?</span><br>
-          <span class="pr6">Kanye vs. the people</span><br>
-          <span class="pr7">AGORA</span><br>
-          <span class="pr8">All Good Works</span>
+          <span class="pr1"><a href="url">Check Yourself</a></span><br>
+          <span class="pr2"><a href="url">Museum of the Invisible</a></span><br>
+          <span class="pr3"><a href="url">NOVUS</a></span><br>
+          <span class="pr4"><a href="url">Product: Natural</a></span><br>
+          <span class="pr5"><a href="url">The Robin Hood?</a></span><br>
+          <span class="pr6"><a href="url">Kanye vs. the people</a></span><br>
+          <span class="pr7"><a href="url">AGORA</a></span><br>
+          <span class="pr8"><a href="url">All Good Works</a></span>
           <br><br><br>
 
           <span class="underline">GET IN TOUCH &#8595;</span>
           <br><br>
-          <span class="insta">Instagram</span><br>
-          <span class="linkedin">Linked in</span><br>
-          <span class="email">Email</span><br>
+          <span class="insta"><a href="https://www.instagram.com/almasantang">Instagram</a></span><br>
+          <span class="linkedin"><a href="https://www.linkedin.com/in/almasantang/">Linked In</a></span><br>
+          <span class="email"><a href="mailto: almasantang@gmail.com">Email</a></span><br>
           <br><br><br>
           </div>
         </div>
