--- a/project-checkyourself.html
+++ b/project-checkyourself.html
@@ -18,31 +18,17 @@
           AS
          </span>
     </div>
-
-    <div class="grid">
-      <div class="col">
-        <div class="bodycopy"> <span class="wave">👋</span><br>
-            Alma Santang is a communication designer based in Naarm/Melbourne.
-        </div>
-      </div>
-    </div>
     
     <div class="grid">
       <div class="col">
-        <div class="smallbodycopy">
-          Her main focus is Brand Identity and Publishing. She helps build and shape brands through thoughtful process and developments. Indonesian food, good music, and sunset are a few of her favourite things.
+        <div class="projectbodycopy">
+          <span class="project-title">Check Yourself</span>
+          is a project about anti-bullying. It focuses on asking individuals whether or not they are a bully. It’s here to inform the uninformed, stand with the bullied, and confront the bullies. I have developed a website which is live at CHECKYOURSELF.ONLINE (website is now inactive). It is an interactive space where the users can interact with different elements on the website; such as the  hover to find out the statistics on bullying, pop- ups filled with real stories from real people to  try and create sympathy and empathy within the users. The aim is to share these stories with everyone else so we all know how damaging bullying can be. The Check Yourself page is the most critical aspect of this website. The aim of this is not to get an accurate result of how much of a bully you are, but to reflect on themselves while answering the questions. The final page after getting the result from the quiz has information on what the project is about, as well as extra resources about bullying. <br>Stickers are produced as part of the project. The idea is for the stickers to be placed in public spaces. A bold “Check Yourself” statement should spark the curiosity in anyone. Accompanied by a bar- code to redirect people to the website and learn about the project.
           <br><br><br>
           <div class="portfolio-part">
           <span class="underline">PROJECTS &#8595;</span>
           <br><br>
-          <span class="pr1"><a href="project-checkyourself.html">Check Yourself</a></span><br>
-          <span class="pr2"><a href="project-moti.html">Museum of the Invisible</a></span><br>
-          <span class="pr3"><a href="project-novus.html">NOVUS</a></span><br>
-          <span class="pr4"><a href="project-productnatural.html">Product: Natural</a></span><br>
-          <span class="pr5"><a href="project-therobinhood.html">The Robin Hood?</a></span><br>
-          <span class="pr6"><a href="project-kanye.html">Kanye vs. the people</a></span><br>
-          <span class="pr7"><a href="project-agora.html">AGORA</a></span><br>
-          <span class="pr8"><a href="project-agw.html">All Good Works</a></span>
+          <span class="pr2"><a href="project-moti.html">Next Project</a></span><br>
           <br><br><br>
 
           <span class="underline">GET IN TOUCH &#8595;</span>
