--- a/project-checkyourself.html
+++ b/project-checkyourself.html
@@ -22,6 +22,7 @@
     <div class="grid">
       <div class="col">
         <div class="projectbodycopy">
+          <img src="">
           <span class="project-title">Check Yourself</span>
           is a project about anti-bullying. It focuses on asking individuals whether or not they are a bully. It’s here to inform the uninformed, stand with the bullied, and confront the bullies. I have developed a website which is live at CHECKYOURSELF.ONLINE (website is now inactive). It is an interactive space where the users can interact with different elements on the website; such as the  hover to find out the statistics on bullying, pop- ups filled with real stories from real people to  try and create sympathy and empathy within the users. The aim is to share these stories with everyone else so we all know how damaging bullying can be. The Check Yourself page is the most critical aspect of this website. The aim of this is not to get an accurate result of how much of a bully you are, but to reflect on themselves while answering the questions. The final page after getting the result from the quiz has information on what the project is about, as well as extra resources about bullying. <br>Stickers are produced as part of the project. The idea is for the stickers to be placed in public spaces. A bold “Check Yourself” statement should spark the curiosity in anyone. Accompanied by a bar- code to redirect people to the website and learn about the project.
           <br><br><br>
