--- a/index.html
+++ b/index.html
@@ -15,22 +15,23 @@
 
     <div class="logo-bar">
         <span class="logo">
-          AS
+          Alma Santang
          </span>
     </div>
 
     <div class="grid">
       <div class="col">
         <div class="bodycopy"> <span class="wave">👋</span><br>
-            Alma Santang is a communication designer based in Naarm/Melbourne.
+            Alma Santang is a Naarm/Melbourne based communication designer. More about her <span class="about"><a href="about-page.html"> &#8594; right this way.</a></span> Selected projects &#8595; down below.
         </div>
       </div>
     </div>
     
-    <div class="grid">
+      
+<!-- 
+       <div class="grid">
       <div class="col">
         <div class="smallbodycopy">
-          Her main focus is Brand Identity and Publishing. She helps build and shape brands through thoughtful process and developments. Indonesian food, good music, and sunset are a few of her favourite things.
           <br><br><br>
           <div class="portfolio-part">
           <span class="underline">PROJECTS &#8595;</span>
@@ -54,7 +55,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
 
