add first project gif

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <div class="col">
         <div class="bodycopy"> <span class="wave">👋</span><br>
             Alma Santang is a Naarm/Melbourne based communication designer. More about her <span class="about"><a href="about-page.html"> &#8594; right this way.</a></span> Selected projects &#8595; down below.
+            <br><br>
+            <div class="pic-1"><img src="assets/images/hp-project-checkyourself.gif"></div>
         </div>
       </div>
     </div>
