text size change

--- a/about-page.html
+++ b/about-page.html
@@ -31,8 +31,18 @@
 
         <!-- HOMEPAGE HEADER COPY STARTS HERE -->
         <div class="bodycopy-hp">
-            I am currently a full-time digital designer at Sand & Sky and part-time freelance communication designer. I completed my Bachelor of Design degree at Monash University, majoring in communication design & focusing on brand identity, publication, and motion graphics. I take inspirations from different projects and exploration by pushing my own boundaries.
-          </div>
+            I am currently a full-time digital designer at Sand & Sky and part-time freelance communication designer.<br>I completed my Bachelor of Design degree at Monash University, majoring in communication design & focusing on
+            <span class="bodycopy-highlight">brand identity</span>, <span class="bodycopy-highlight">publication</span>, and <span class="bodycopy-highlight">motion graphics</span>.<br>I take inspirations from different projects and exploration by pushing my own boundaries.
+        </div>
+
+        <div class="smallbodycopy">
+            Always approaching projects with a fresh mind, I aim to do it differently each time yet still making sure I’m delivering the objectives. Indonesian food 🍴, good music 🎵, and sunset ☀️ are a few of my favourite things.
+        </div>
+
+        <div class="about-title">Experience
+        </div>
+
+        <a href="project-checkyourself.html" class="alma-pic"><img src="assets/images/pic-alma.jpg"></a>
         <!-- HOMEPAGE HEADER COPY ENDS HERE -->      
         
       </div>
