--- a/about-page.html
+++ b/about-page.html
@@ -29,7 +29,7 @@
     <div class="grid">
       <div class="col">
 
-        <!-- HOMEPAGE HEADER COPY STARTS HERE -->
+        <!-- MAIN DESCRIPTIONS -->
         <div class="bodycopy-hp">
             I am currently a full-time digital designer at Sand & Sky and part-time freelance communication designer.<br>I completed my Bachelor of Design degree at Monash University, majoring in communication design & focusing on
             <span class="bodycopy-highlight">brand identity</span>, <span class="bodycopy-highlight">publication</span>, and <span class="bodycopy-highlight">motion graphics</span>.<br>I take inspirations from different projects and exploration by pushing my own boundaries.
@@ -38,12 +38,37 @@
         <div class="smallbodycopy">
             Always approaching projects with a fresh mind, I aim to do it differently each time yet still making sure I’m delivering the objectives. Indonesian food 🍴, good music 🎵, and sunset ☀️ are a few of my favourite things.
         </div>
+        <!-- MAIN DESCRIPTIONS -->
 
-        <div class="about-title">Experience
+
+        <!-- EXPERIENCE -->
+        <div class="about-title">Experience</div>
+        <div class="about-body">
+          The Design Kids Award Winner (2019)<br>
+          <span class="about-body-desc">
+            Check out the full interview <a class="about-body-desc-link">here!</a></span>
+          <br><br>
+
+          Junior Digital Designer full time at Sand & Sky  (Jan 2020 – Present)<br>
+          Graphic Designer part time at Sand & Sky  (Dec 2018 – Jan 2020)<br>
+          Graphic Design Intern at Sand & Sky  (Aug 2018 – Nov 2018)<br>
+          <span class="about-body-desc">
+            Sand & Sky is a no-worries skincare brand that works with clean, effective, lovely-to-use formulas. It is a brand under a rapidly growing Social E-Commerce company, Supernova, creating innovative Health, Beauty and Fitness products from the ground up.</span>
+          <br><br>
+
+          PPIA Victoria Internal Creative (Dec 2018 – Oct 2019)<br>
+          <span class="about-body-desc">
+            PPIA Victoria is a student organisation which embodies all of the Indonesian students’ unions in the state of Victoria, Australia. It affiliates with the Indonesian Students’ Association of Australia.</span>
+          <br><br>
+
+          Graphic designer & focus group facilitator (2018)
+          <span class="about-body-desc">
+            Under a project with Monash University for NEAMI</span>
+
         </div>
 
         <a href="project-checkyourself.html" class="alma-pic"><img src="assets/images/pic-alma.jpg"></a>
-        <!-- HOMEPAGE HEADER COPY ENDS HERE -->      
+        <!-- EXPERIENCE -->     
         
       </div>
     </div>
