test about page

--- a/about-page.html
+++ b/about-page.html
@@ -45,10 +45,9 @@
         <!-- EXPERIENCE -->
         <div class="about-title">Experience</div>
         <div class="about-body">
-
           The Design Kids Award Winner (2019)<br>
           <span class="about-body-desc">
-            Check out the full interview <a class="about-body-desc-link">here!</a></span>
+            Check out the full interview <a href="https://bit.ly/33y1oAa" class="about-body-desc-link">here!</a></span>
           <br><br>
 
           Junior Digital Designer full time at Sand & Sky  (Jan 2020 – Present)<br>
@@ -63,12 +62,21 @@
             PPIA Victoria is a student organisation which embodies all of the Indonesian students’ unions in the state of Victoria, Australia. It affiliates with the Indonesian Students’ Association of Australia.</span>
           <br><br>
 
-          Graphic designer & focus group facilitator (2018)
+          Graphic designer & focus group facilitator (2018)<br>
           <span class="about-body-desc">
             Under a project with Monash University for NEAMI</span>
-
         </div>
 
+        <div class="about-title">Get in touch</div>
+        <div class="about-body">
+          <a href="mailto: almasantang@gmail.com" target="_blank" class="contact-link">↗Email</a><br>
+          <a href="https://www.linkedin.com/in/almasantang/" target="_blank" class="contact-link">↗LinkedIn</a><br>
+          <a href="https://www.instagram.com/almasantang" target="_blank" class="contact-link">↗Instagram</a><br>
+          <a href="https://drive.google.com/file/d/18A8EbfJSxAQur0iXs6ENSsyQa0LcgGPu/view?usp=sharing" target="_blank" class="contact-link">↗Download portfolio</a><br>
+        </div><br><br><br><br><br><br><br><br>
+
+        <div class="about-title">⤺Take me home</div>
+        <br><br><br><br><br>
         
         <!-- EXPERIENCE -->     
         
