--- a/about-page.html
+++ b/about-page.html
@@ -25,10 +25,10 @@
       <span class="logo">Alma Santang</span>
     </div>
   <!-- AS LOGO ENDS HERE -->
-
+    <div class="alma-pic"><img src="assets/images/pic-alma.jpg"></div>
     <div class="grid">
       <div class="col">
-        <a href="project-checkyourself.html" class="alma-pic"><img src="assets/images/pic-alma.jpg"></a>
+        
 
         <!-- MAIN DESCRIPTIONS -->
         <div class="bodycopy-hp">
