--- a/about-page.html
+++ b/about-page.html
@@ -47,7 +47,7 @@
         <div class="about-body">
           The Design Kids Award Winner (2019)<br>
           <span class="about-body-desc">
-            Check out the full interview <a href="https://bit.ly/33y1oAa" class="about-body-desc-link">here!</a></span>
+            Check out the full interview <a href="https://bit.ly/33y1oAa" target="_blank" class="about-body-desc-link">here!</a></span>
           <br><br>
 
           Junior Digital Designer full time at Sand & Sky  (Jan 2020 – Present)<br>
@@ -75,7 +75,7 @@
           <a href="https://drive.google.com/file/d/18A8EbfJSxAQur0iXs6ENSsyQa0LcgGPu/view?usp=sharing" target="_blank" class="contact-link">↗Download portfolio</a><br>
         </div><br><br><br><br><br><br><br><br>
 
-        <div class="about-title">⤺Take me home</div>
+        <div class="about-title"> <a href="index.html" class="navigation">⤺Take me home</a></div>
         <br><br><br><br><br>
         
         <!-- EXPERIENCE -->     
