--- a/about-page.html
+++ b/about-page.html
@@ -22,7 +22,7 @@
 
   <!-- AS LOGO STARTS HERE-->
     <div class="logo-bar">
-      <span class="logo">Alma Santang</span>
+      <span class="logo"><a href="index.html" class="logo-nav">Alma Santang</a></span>
     </div>
   <!-- AS LOGO ENDS HERE -->
     <div class="alma-pic"><img src="assets/images/pic-alma.jpg"></div>
