--- a/about-page.html
+++ b/about-page.html
@@ -32,8 +32,8 @@
 
         <!-- MAIN DESCRIPTIONS -->
         <div class="bodycopy-hp">
-            I am currently a full-time digital designer at Sand & Sky and part-time freelance communication designer.<br>I completed my Bachelor of Design degree at Monash University, majoring in communication design & focusing on
-            <span class="bodycopy-highlight">brand identity</span>, <span class="bodycopy-highlight">publication</span>, and <span class="bodycopy-highlight">motion graphics</span>.<br>I take inspirations from different projects and exploration by pushing my own boundaries.
+            I am currently a full-time digital designer at Sand & Sky and a part-time freelance communication designer.<br>I completed my Bachelor of Design degree at Monash University, majoring in communication design & focusing on
+            <span class="bodycopy-highlight">brand identity</span>, <span class="bodycopy-highlight">publication</span>, and <span class="bodycopy-highlight">motion graphics</span>.<br>I take inspirations from different projects and exploration by pushing my boundaries.
         </div>
 
         <div class="smallbodycopy">
