--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- HOMEPAGE HEADER COPY STARTS HERE -->
         <div class="bodycopy-hp"> <span class="wave">👋</span><br>
             Alma is a Naarm/Melbourne based communication designer. More about her
-            <a href="about-page.html"><span class="arrow-header">&#8594;</span> right this way.</a>
+            <a href="about-page.html"><span class="arrow-header">&#8594;right this way.</span> </a>
             <br>
             Selected projects
             <span class="arrow-header">&#8595;</span> down below.
@@ -48,15 +48,17 @@
 
             <a href="project-productnatural.html" class="pic-3"><img src="assets/images/HP_PROJECT_IMAGES/pr3-productnatural.gif"></a>
 
-            <a href="project-productnatural.html" class="pic-4"><img src="assets/images/HP_PROJECT_IMAGES/pr4-NOVUS.png"></a>
+            <a href="project-novus.html" class="pic-4"><img src="assets/images/HP_PROJECT_IMAGES/pr4-NOVUS.png"></a>
 
-            <a href="project-productnatural.html" class="pic-5"><img src="assets/images/HP_PROJECT_IMAGES/pr5-therobinhood.png"></a>
+            <a href="project-therobinhood.html" class="pic-5"><img src="assets/images/HP_PROJECT_IMAGES/pr5-therobinhood.png"></a>
 
-            <a href="project-productnatural.html" class="pic-6"><img src="assets/images/HP_PROJECT_IMAGES/pr6-AGORA.gif"></a>
+            <a href="project-agora.html" class="pic-6"><img src="assets/images/HP_PROJECT_IMAGES/pr8-AGORA.gif"></a>
 
-            <a href="project-productnatural.html" class="pic-7"><img src="assets/images/HP_PROJECT_IMAGES/pr7-agw.gif"></a>
+            <a href="project-agw.html" class="pic-7"><img src="assets/images/HP_PROJECT_IMAGES/pr7-agw.gif"></a>
 
-            <a href="project-productnatural.html" class="pic-8"><img src="assets/images/HP_PROJECT_IMAGES/pr8-kanyevthepeople.png"></a>
+            <a href="project-kanyevthepeople.html" class="pic-8"><img src="assets/images/HP_PROJECT_IMAGES/pr6-kanyevthepeople.png"></a>
+
+            <a href="project-stayinside.html" class="pic-9"><img src="assets/images/HP_PROJECT_IMAGES/pr9-stayinside.gif"></a>
             <br><br>
         </div>
         <!-- HOMEPAGE PROJECTS REEL ENDS HERE --> 
