--- a/project-novus.html
+++ b/project-novus.html
@@ -14,23 +14,24 @@
     <link rel="stylesheet" href="https://use.typekit.net/acq8lgu.css">
   </head>
 <!-- BODY STARTS HERE -->
-  <body class="background-pr1">
+  <body class="background-pr4">
 
   <!-- CURSOR STARTS HERE -->
-    <!-- <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1314 712">
+<!--     <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1314 712">
       <polyline id="polyline" fill="none" points=" 746,376 754,377 783,381 802,385 824,391 827,393 868,400 939,408 988,415 1133,427 1205,432"></polyline>
     </svg> -->
   <!-- CURSOR ENDS HERE -->
 
   <!-- AS LOGO STARTS HERE-->
-    <div class="logo-bar BACKGROUND">
+    <div class="logo-bar">
       <span class="logo"><a href="index.html" class="logo-nav">Alma Santang</a></span>
     </div>
   <!-- AS LOGO ENDS HERE -->
 
 <!--   NAVIGATION -->
     <div class="navigation-home"> <a href="index.html" class="navigation-home">⤺Take me home</a></div>
-    <div class="navigation-next"> <a href="project-moti.html" class="navigation-next">→Next</a></div>
+    <div class="navigation-next"> <a href="project-therobinhood.html" class="navigation-next">→Next</a></div>
+    <div class="navigation-prev"> <a href="project-productnatural.html" class="navigation-prev">Prev←</a></div>
 <!--   NAVIGATION -->
 
     <div class="grid background">
@@ -38,27 +39,27 @@
         
 
         <!-- MAIN DESCRIPTIONS -->
-        <div class="title titlepr1 background">
-            CHECK YOURSELF — 2019
+        <div class="title titlepr4 background">
+            NOVUS — 2019
         </div>
 
         <div class="mainbodycopy background">
-            Check Yourself is a project about anti-bullying which main focus is to build more awareness on bullying and encourages people to question themselves. It’s here to inform the uninformed, stand with the bullied, and confront the bullies.
+            NOVUS is an exhibition to create awareness and a call to action on the fastest-growing stream of waste in the world, electronic waste, and the damage it is creating.
         </div>
 
         <div class="about-body background">
-            I developed a website which is live at CHECKYOURSELF.ONLINE (website is now inactive). It is an interactive space built to make people actively engage with the topic. One main focus of the project is to give a platform for people who had experienced bullying to share their stories, which also acts as a wake-up call for people to realise how damaging bullying can be, no matter how small it is. The Check Yourself page is the other critical aspect of the website. The goal is not to put a number on your level of bully-ness, rather than for people to reflect on themselves while answering the questions. The result page itself contains more information on what the project is about, as well as extra resources on how to combat bullying.
+            Based on the work of Studio Formafantasma’s Ore Stream, I was tasked to create an identity for the exhibition. The identity of NOVUS focuses on the idea of e-waste recycling; of breaking/ taking something apart and making something new out of it. Actual facts are used as part of the campaign to reach the objective of the exhibition which is to create awareness. I also conceptualised how the exhibition is going to look like and what’s in it. One of which is an ACT-NOW room, where visitors can drop off their old electronics to be recycled by NGV after the exhibition finishes.
         </div>
 
         <div class="title titledesc background">
-          <br><br><br>Brand Identity & Web Design<br>
-          Supervised by Adam Cruickshank & Alex Margetic
+          <br><br><br><br><br><br>On-demand book & web design<br>
+          Supervised by Uriah Gray
         </div>
         <!-- MAIN DESCRIPTIONS -->
       </div>
     </div>
 
-    <div class="background-pr1">
+    <div class="background-pr4">
       <br><br><br><br>
       <span class="pr1-image-1"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg"></span>
       <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
