--- a/project-agora.html
+++ b/project-agora.html
@@ -14,23 +14,24 @@
     <link rel="stylesheet" href="https://use.typekit.net/acq8lgu.css">
   </head>
 <!-- BODY STARTS HERE -->
-  <body class="background-pr1">
+  <body class="background-pr8">
 
   <!-- CURSOR STARTS HERE -->
-    <!-- <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1314 712">
+<!--     <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1314 712">
       <polyline id="polyline" fill="none" points=" 746,376 754,377 783,381 802,385 824,391 827,393 868,400 939,408 988,415 1133,427 1205,432"></polyline>
     </svg> -->
   <!-- CURSOR ENDS HERE -->
 
   <!-- AS LOGO STARTS HERE-->
-    <div class="logo-bar BACKGROUND">
+    <div class="logo-bar">
       <span class="logo"><a href="index.html" class="logo-nav">Alma Santang</a></span>
     </div>
   <!-- AS LOGO ENDS HERE -->
 
 <!--   NAVIGATION -->
     <div class="navigation-home"> <a href="index.html" class="navigation-home">⤺Take me home</a></div>
-    <div class="navigation-next"> <a href="project-moti.html" class="navigation-next">→Next</a></div>
+    <div class="navigation-next"> <a href="project-stayinside.html" class="navigation-next">→Next</a></div>
+    <div class="navigation-prev"> <a href="project-agw.html" class="navigation-prev">Prev←</a></div>
 <!--   NAVIGATION -->
 
     <div class="grid background">
@@ -38,27 +39,27 @@
         
 
         <!-- MAIN DESCRIPTIONS -->
-        <div class="title titlepr1 background">
-            CHECK YOURSELF — 2019
+        <div class="title titlepr8 background">
+            AGORA — 2020
         </div>
 
         <div class="mainbodycopy background">
-            Check Yourself is a project about anti-bullying which main focus is to build more awareness on bullying and encourages people to question themselves. It’s here to inform the uninformed, stand with the bullied, and confront the bullies.
+            Agora creates a space for writers and creators to share bits of the pieces they’re from and put forward new, bold ideas. By being tirelessly interested in the present moment, Agora aims to create a publication that patches together a global perspective on what makes the young(ish) person tick, what they’re curious about, and what they hold out hope for.
         </div>
 
         <div class="about-body background">
-            I developed a website which is live at CHECKYOURSELF.ONLINE (website is now inactive). It is an interactive space built to make people actively engage with the topic. One main focus of the project is to give a platform for people who had experienced bullying to share their stories, which also acts as a wake-up call for people to realise how damaging bullying can be, no matter how small it is. The Check Yourself page is the other critical aspect of the website. The goal is not to put a number on your level of bully-ness, rather than for people to reflect on themselves while answering the questions. The result page itself contains more information on what the project is about, as well as extra resources on how to combat bullying.
+            Agora is a Greek word which means a public open space used for assemblies and markets. The main objective of this task was to create a logo that encapsulates Agora’s energy. We agreed on making it look contemporary and minimal, yet still fun.
         </div>
 
         <div class="title titledesc background">
-          <br><br><br>Brand Identity & Web Design<br>
-          Supervised by Adam Cruickshank & Alex Margetic
+          <br><br><br><br><br><br><br><br><br><br>Logo & motion graphics<br>
+          Client: Agora (Australia)
         </div>
         <!-- MAIN DESCRIPTIONS -->
       </div>
     </div>
 
-    <div class="background-pr1">
+    <div class="background-pr8">
       <br><br><br><br>
       <span class="pr1-image-1"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg"></span>
       <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
