--- a/project-moti.html
+++ b/project-moti.html
@@ -14,23 +14,24 @@
     <link rel="stylesheet" href="https://use.typekit.net/acq8lgu.css">
   </head>
 <!-- BODY STARTS HERE -->
-  <body class="background-pr1">
+  <body class="background-pr2">
 
   <!-- CURSOR STARTS HERE -->
-    <!-- <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1314 712">
+<!--     <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1314 712">
       <polyline id="polyline" fill="none" points=" 746,376 754,377 783,381 802,385 824,391 827,393 868,400 939,408 988,415 1133,427 1205,432"></polyline>
     </svg> -->
   <!-- CURSOR ENDS HERE -->
 
   <!-- AS LOGO STARTS HERE-->
-    <div class="logo-bar BACKGROUND">
+    <div class="logo-bar">
       <span class="logo"><a href="index.html" class="logo-nav">Alma Santang</a></span>
     </div>
   <!-- AS LOGO ENDS HERE -->
 
 <!--   NAVIGATION -->
     <div class="navigation-home"> <a href="index.html" class="navigation-home">⤺Take me home</a></div>
-    <div class="navigation-next"> <a href="project-moti.html" class="navigation-next">→Next</a></div>
+    <div class="navigation-next"> <a href="project-productnatural.html" class="navigation-next">→Next</a></div>
+    <div class="navigation-prev"> <a href="project-checkyourself.html" class="navigation-prev">Prev←</a></div>
 <!--   NAVIGATION -->
 
     <div class="grid background">
@@ -38,27 +39,27 @@
         
 
         <!-- MAIN DESCRIPTIONS -->
-        <div class="title titlepr1 background">
-            CHECK YOURSELF — 2019
+        <div class="title titlepr2 background">
+            MUSEUM OF THE INVISIBLE — 2018
         </div>
 
         <div class="mainbodycopy background">
-            Check Yourself is a project about anti-bullying which main focus is to build more awareness on bullying and encourages people to question themselves. It’s here to inform the uninformed, stand with the bullied, and confront the bullies.
+            The task was to create a visual identity for a conceptual museum. I was inspired by a book that I used to read as a kid. One of the stories was about how Antonio Meucci got betrayed by Alexander Graham Bell. Museum of the Invisible is dedicated to historical figures who didn’t get the recognition they deserved.
         </div>
 
         <div class="about-body background">
-            I developed a website which is live at CHECKYOURSELF.ONLINE (website is now inactive). It is an interactive space built to make people actively engage with the topic. One main focus of the project is to give a platform for people who had experienced bullying to share their stories, which also acts as a wake-up call for people to realise how damaging bullying can be, no matter how small it is. The Check Yourself page is the other critical aspect of the website. The goal is not to put a number on your level of bully-ness, rather than for people to reflect on themselves while answering the questions. The result page itself contains more information on what the project is about, as well as extra resources on how to combat bullying.
+            Being a trailblazer isn’t easy. By definition, you are doing something that no one else has ever done before. The situation gets terrible when you don’t receive any credit for your work. Imagine making a difference in this world, and you don’t receive any credit for it, or worse, somebody stole your idea and claiming it as theirs. Unfortunately, it has happened to the best people. Together with MoTI, we are hoping to shed lights on these hidden figures.
         </div>
 
         <div class="title titledesc background">
-          <br><br><br>Brand Identity & Web Design<br>
-          Supervised by Adam Cruickshank & Alex Margetic
+          <br>Brand Identity<br>
+          Supervised by Janet Mills
         </div>
         <!-- MAIN DESCRIPTIONS -->
       </div>
     </div>
 
-    <div class="background-pr1">
+    <div class="background-pr2">
       <br><br><br><br>
       <span class="pr1-image-1"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg"></span>
       <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
