--- a/project-productnatural.html
+++ b/project-productnatural.html
@@ -14,23 +14,24 @@
     <link rel="stylesheet" href="https://use.typekit.net/acq8lgu.css">
   </head>
 <!-- BODY STARTS HERE -->
-  <body class="background-pr1">
+  <body class="background-pr3">
 
   <!-- CURSOR STARTS HERE -->
-    <!-- <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1314 712">
+<!--     <svg id="svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1314 712">
       <polyline id="polyline" fill="none" points=" 746,376 754,377 783,381 802,385 824,391 827,393 868,400 939,408 988,415 1133,427 1205,432"></polyline>
     </svg> -->
   <!-- CURSOR ENDS HERE -->
 
   <!-- AS LOGO STARTS HERE-->
-    <div class="logo-bar BACKGROUND">
+    <div class="logo-bar">
       <span class="logo"><a href="index.html" class="logo-nav">Alma Santang</a></span>
     </div>
   <!-- AS LOGO ENDS HERE -->
 
 <!--   NAVIGATION -->
     <div class="navigation-home"> <a href="index.html" class="navigation-home">⤺Take me home</a></div>
-    <div class="navigation-next"> <a href="project-moti.html" class="navigation-next">→Next</a></div>
+    <div class="navigation-next"> <a href="project-novus.html" class="navigation-next">→Next</a></div>
+    <div class="navigation-prev"> <a href="project-moti.html" class="navigation-prev">Prev←</a></div>
 <!--   NAVIGATION -->
 
     <div class="grid background">
@@ -38,27 +39,27 @@
         
 
         <!-- MAIN DESCRIPTIONS -->
-        <div class="title titlepr1 background">
-            CHECK YOURSELF — 2019
+        <div class="title titlepr3 background">
+            PRODUCT: NATURAL — 2019
         </div>
 
         <div class="mainbodycopy background">
-            Check Yourself is a project about anti-bullying which main focus is to build more awareness on bullying and encourages people to question themselves. It’s here to inform the uninformed, stand with the bullied, and confront the bullies.
+            Based on an E-zine written by J in 2000 for Another Night and Day alliance, Product: Natural contains J’s rant on how often the word “natural” or “fresh” is used as advertising jargon. Product: Natural dissects J’s piece, contrasts and supplements it with contents from 2000 to the present day.
         </div>
 
         <div class="about-body background">
-            I developed a website which is live at CHECKYOURSELF.ONLINE (website is now inactive). It is an interactive space built to make people actively engage with the topic. One main focus of the project is to give a platform for people who had experienced bullying to share their stories, which also acts as a wake-up call for people to realise how damaging bullying can be, no matter how small it is. The Check Yourself page is the other critical aspect of the website. The goal is not to put a number on your level of bully-ness, rather than for people to reflect on themselves while answering the questions. The result page itself contains more information on what the project is about, as well as extra resources on how to combat bullying.
+            Product: Natural explores how the way of advertising has changed, and whether or not the word “natural” or “fresh” still create a significant impact in today’s society and asks the question: why do we even care about it? A website was created to promote and expand the context of the book. Inspired by the look of Instagram, where most (subliminal) advertising finds its way to us. It contains pictures of the book itself, photographed alongside “natural” products. Each chapter of the book becomes each page of the website, the pages contain excerpts from the book.
         </div>
 
         <div class="title titledesc background">
-          <br><br><br>Brand Identity & Web Design<br>
-          Supervised by Adam Cruickshank & Alex Margetic
+          On-demand book & web design<br>
+          Supervised by Uriah Gray
         </div>
         <!-- MAIN DESCRIPTIONS -->
       </div>
     </div>
 
-    <div class="background-pr1">
+    <div class="background-pr3">
       <br><br><br><br>
       <span class="pr1-image-1"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg"></span>
       <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
