--- a/project-checkyourself.html
+++ b/project-checkyourself.html
@@ -64,7 +64,16 @@
       <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
       <span class="pr1-image-3"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/03_ideationposter.gif"></span>
       <span class="pr1-image-4"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/07_webflow3.jpg"></span>
-      <span class="pr1-image-5"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg"></span>
+      <!-- <span class="pr1-image-5"><a href="https://vimeo.com/453154042" target="blank_"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg"></a></span> -->
+      <span class="pr1-image-5"><iframe src="https://player.vimeo.com/video/453154042" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class></iframe></span>
+      <span class="pr1-image-6"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/13_mirror.png"></span>
+      <span class="pr1-image-7"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/05_stickers.png"></span>
+      <span class="pr1-image-8"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/08_decor.png"></span>
+      <span class="pr1-image-9"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/11_decor.png"></span>
+      <span class="pr1-image-10"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/10_decor.png"></span>
+      <span class="pr1-image-11"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/12_decor.png"></span>
+      <span class="pr1-image-12"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/09_decor.png"></span>
+      <span class="pr1-image-13"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/10_decor.png"></span>
     </div>
 
        
