--- a/project-checkyourself.html
+++ b/project-checkyourself.html
@@ -62,35 +62,45 @@
       <br><br><br><br>
       <div id="box" >
         <img src="assets/images/PROJECTS/01_CHECKYOURSELF/02_mainposter.jpg" width="30%" style="left:10%">
-        <img src="assets/images/PROJECTS/01_CHECKYOURSELF/11_decor.png"  width="10%" style="padding-top:10%; left:80%">
-        <img src="assets/images/PROJECTS/01_CHECKYOURSELF/08_decor.png" width="10%" style="padding-top:5%; left:75%">
+        <img src="assets/images/PROJECTS/01_CHECKYOURSELF/11_decor.png"  width="5%" style="padding-top:10%; left:80%">
+        <img src="assets/images/PROJECTS/01_CHECKYOURSELF/08_decor.png" width="8%" style="padding-top:5%; left:76%">
       </div>
+
       <div id="box">
         <img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif" width="30%" style="padding-top:30%; left:50%">
       </div>
+
       <div id="box">
-        <img src="assets/images/PROJECTS/01_CHECKYOURSELF/03_ideationposter.gif" width="40%" style="padding-top:60%; left:30%">
+        <img src="assets/images/PROJECTS/01_CHECKYOURSELF/03_ideationposter.gif" width="40%" style="padding-top:60%; left:20%">
       </div>
 
       <div id="box">
-
-        <img src="assets/images/PROJECTS/01_CHECKYOURSELF/03_ideationposter.gif" width="40%" style="padding-top:60%; left:30%">
-
-      </div>
-
-
-      <div id="box">
-
-        <img src="assets/images/PROJECTS/01_CHECKYOURSELF/07_webflow3.jpg" width="40%" style="padding-top:95%; left:60%">
-
+        <img src="assets/images/PROJECTS/01_CHECKYOURSELF/07_webflow3.jpg" width="40%" style="padding-top:95%; left:55%">
       </div>
 
        <div id="box">
-
-        <a href="https://vimeo.com/453154042" target="blank_"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg" width="40%" style="padding-top:105%; left:26%"></a>
-
+        <a href="https://vimeo.com/453154042" target="blank_"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/04_webflow.jpg" width="40%" style="padding-top:105%; left:23%"></a>
       </div>
       
+      <div id="box">
+        <img src="assets/images/PROJECTS/01_CHECKYOURSELF/12_decor.png" width="5%" style="padding-top:120%; left:70%">
+      </div>
+
+      <div id="box">
+        <img src="assets/images/PROJECTS/01_CHECKYOURSELF/09_decor.png" width="5%" style="padding-top:130%; left:80%">
+      </div>
+
+      <div id="box">
+        <img src="assets/images/PROJECTS/01_CHECKYOURSELF/10_decor.png" width="5%" style="padding-top:131%; left:77%">
+      </div>
+
+      <div id="box">
+        <img src="assets/images/PROJECTS/01_CHECKYOURSELF/13_mirror.png" width="40%" style="padding-top:135%; left:10%">
+      </div>
+
+      <div id="box">
+        <img src="assets/images/PROJECTS/01_CHECKYOURSELF/05_stickers.png" width="20%" style="padding-top:165%; left:45%; padding-bottom:15%;">
+      </div>
 
       <!-- BODY ENDS HERE 
       <span class="pr1-image-2"><img src="assets/images/PROJECTS/01_CHECKYOURSELF/01_IDEATIONPRESENTATION.gif"></span>
